plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.14'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.store.reservation'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// ORM
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Web Development Environment
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Redis
	implementation 'org.redisson:redisson-spring-boot-starter:3.16.3'

	// 보안 및 사용자 인증
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation group: 'io.jsonwebtoken', name:"jjwt", version:"0.9.1"

	// 로깅
	implementation 'org.springframework.data:spring-data-envers'

	// Mysql Driver
	implementation 'com.mysql:mysql-connector-j'

	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'

	// Gson
	implementation 'com.google.code.gson:gson:2.9.0'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// QueryDsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jpa'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

	// aws s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// swagger
	implementation 'io.springfox:springfox-boot-starter:3.0.0'

	runtimeOnly 'com.h2database:h2'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}
tasks.named('test') {
	useJUnitPlatform()
}

